Fixed [SES-669] Sesame's binary query results format is unable to encode query results with zero variable bindings/empty tuples